2008-01-29  Martin Hunt  <hunt@redhat.com>

	* alloc.c (struct _stp_malloc_type): Remove
	redundant field.

2008-01-28  Martin Hunt  <hunt@redhat.com>

	* alloc.c: Use DEFINE_SPINLOCK.
	* counter.c: Ditto.
	* pmap-gen.c: Ditto.
	* print_new.c: Ditto.
	* stat.c: Ditto.
	
2008-01-27  Frank Ch. Eigler  <fche@elastic.org>

	* stack-i386.c (__stp_stack_print): Correct #elif->#else typo.

2008-01-14  Martin Hunt  <hunt@redhat.com>

	* print.c (_stp_print_kernel_info): New function.
	(all):  Call stp memory functions.

	* alloc.c: Rewrite to track allocated memory if 
	DEBUG_MEM is defined.
	* counter.c, map.c, stat.c, time.c: Call stp
	memory functions.
	
2007-11-14  Zhaolei  <zhaolei@cn.fujitsu.com>

	From Cai Fei <caifei@cn.fujitsu.com>
	* regs-ia64.c (ia64_fetch_register): Fix the bug of fetching
	register 12 on IA64.

2007-11-12  Martin Hunt  <hunt@redhat.com>

	* print.c (_stp_print): Rewrite to eliminate the strlen()
	call and save a bit of time.

2007-11-09  Masami Hiramatsu  <mhiramat@redhat.com>

	PR3858
	* print.c: Add -DRELAY_HOST=<hostname> and -DRELAY_GUEST=<hostname>
	options support.
	(_stp_print_flush): Disable irqs if -DRELAY_* option is specified.
	* print_old.c: Export stp_print_flush to other modules if the
	-DRELAY_HOST option is specified.
	* print_new.c: Ditto.

2007-10-25  Mike Mason <mmlnx@us.ibm.com>

	* stat-common.c: Allow histogram bucket elision to be turned off
	with -DHIST_ELISION=<negative #>.  Also cleaned up looping code
	to prevent unnecessary interation over non-existent buckets.

2007-10-17  Masami Hiramatsu <mhiramat@redhat.com>

	* autoconf-tsc-khz.c: Not to be compiled if the kernel version is
	younger than 2.6.23 on i386.

2007-10-17  Martin Hunt  <hunt@redhat.com>
	PR5000
	* vsprintf.c: Remove _stp_endian.

2007-10-15  Masami Hiramatsu <mhiramat@redhat.com>

	* autoconf-tsc-khz.c: Fix a bug to be configured correctly.

2007-10-09  Martin Hunt  <hunt@redhat.com>

	* user/*: Removed obsolete userspace test files.
